add page parameters from model to HTML template
On post_save signal page parameters are generated. In PageView via session[participant] and session[round] (which is set after participant is created) get page with parameters. Round is increased for next page generation.

--- a/mysite/page_generator/templates/page_generator/page.html
+++ b/mysite/page_generator/templates/page_generator/page.html
@@ -1,7 +1,17 @@
 {% load static %}
 
+{% if pages %}
+    <ul>
+    {% for page in pages %}
+        <li>{{ page.participant }}/li>
+    {% endfor %}
+    </ul>
+{% else %}
+    <p>No polls are available.</p>
+{% endif %}
+
 <h1>{{ request.session.round }}</h1>
-<h1>page_id</h1>
+<h1>{{  round_page.headline_size }}</h1>
 
 <link rel="stylesheet" type="text/css" href="{% static 'page_generator/style.css' %}">
 
