--- a/mysite/page_generator/templates/page_generator/page.html
+++ b/mysite/page_generator/templates/page_generator/page.html
@@ -22,20 +22,9 @@
 
 {% lorem 3 p %}
 
-<!-- <script>
+<script>
   setTimeout(goToNextPage, 3000);
   function goToNextPage() {
-  	location.href = "http://127.0.0.1:8000/page_generator/"
+  	location.href = "http://127.0.0.1:8000/page_generator/page_rating"
   }
-</script> -->
-
-
-
-<!-- príde mi request na zobrazenie page -->
-<!-- zistím si session[round] -->
-<!-- zmením session [round] na +1 -->
-<!-- podľa toho si získam array parametrov -->
-<!-- nastavím session[pk] -->
-<!-- vygenerujem stránku -->
-<!-- zavolá sa formulár s otázkami -->
-<!-- zistím si session[pk] -->
+</script>
