--- a/mysite/page_generator/templates/page_generator/questionaire.html
+++ b/mysite/page_generator/templates/page_generator/questionaire.html
@@ -1,5 +1,5 @@
 {% load static %}
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="{% static 'page_generator/style.css' %}">
 
 <h1>Demografický dotazník</h1>
