--- a/mysite/page_generator/static/page_generator/style.css
+++ b/mysite/page_generator/static/page_generator/style.css
@@ -9,54 +9,61 @@ h1:first-letter {
   text-transform: capitalize;
 }
 
-
 .headline_size_1 h1 {
-  font-size: 38pt;
+  font-size: 30pt;
 }
 .headline_size_2 h1 {
-  font-size: 48pt;
+  font-size: 38pt;
 }
 .headline_size_3 h1 {
-  font-size: 56pt;
+  font-size: 46pt;
+}
+
+.font_size_1 p, li, a {
+  font-size: 13pt;
+}
+.font_size_2 p {
+  font-size: 16pt;
+}
+.font_size_3 p {
+  font-size: 19pt;
 }
 
 .font_style_1 {
-  font-family: "Times New Roman", Times, serif;
+  font-family: "Roboto", sans-serif;
 }
 .font_style_2 {
-  font-family: Helvetica, sans-serif;
+  font-family: "Helvetica", sans-serif;
 }
 .font_style_3 {
-  font-family: Arial, sans-serif;
+  font-family: "Lumin", serif;
 }
-
-.font_size_1 p {
-  font-size: small;
-}
-.font_size_2 p {
-  font-size: medium;
-}
-.font_size_3 p {
-  font-size: large;
+.font_style_4 {
+  font-family: "Greta", serif;
 }
 
 .color_1 {
-  background-color: beige;
+  background-color: #00247B;
 }
 .color_2 {
-  background-color: bisque;
+  background-color: #026FDF;
 }
 .color_3 {
-  background-color: burlywood;
+  background-color: #CB4E01;
 }
-
+.color_4 {
+  background-color: #FE9554;
+}
 
 .color_1 h1 {
-  background-color: bisque;
+  background-color: #CADFF0;
 }
 .color_2 h1 {
-  background-color: burlywood;
+  background-color: #CDEDF9;
 }
 .color_3 h1 {
-  background-color: sandybrown;
+  background-color: #FFE6d7;
+}
+.color_4 h1 {
+  background-color: #FFE2AC;
 }
