--- a/mysite/page_generator/templates/page_generator/start_page.html
+++ b/mysite/page_generator/templates/page_generator/start_page.html
@@ -1,7 +1,18 @@
 {% load static %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'page_generator/style.css' %}">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
 
-<h1>Pre začatie experimentu stlačte tlačidlo Začať</h1>
-
-<a class="btn btn-primary" href="/page_generator/page">Začať</a>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+    <div class="container">
+        <div class="jumbotron mt-3">
+          <h1 class="display-4">Expriment</h1>
+          <hr class="my-4">
+          <p class="lead">Pre začatie experimentu stlačte nasledovné tlačidlo</p>
+          <a class="btn btn-primary btn-lg w-100" href="/page_generator/page">Začať</a>
+        </div>
+    </div>
+</body>
