--- a/mysite/page_generator/templates/page_generator/questionaire.html
+++ b/mysite/page_generator/templates/page_generator/questionaire.html
@@ -13,7 +13,7 @@
     {% if field.label != 'Session id' %}
       <div class="card mb-3">
         <div class="card-header">
-          <h5 class="card-title mb-2 mt-2">{{ field.label }}</h5>
+          <div class="lead card-title mb-2 mt-2">{{ field.label }}</div>
         </div>
         <div class="card-body">
           {% for radio in field %}
@@ -35,6 +35,7 @@
     {% endif %}
   {% endfor %}
 
-  <input type="submit" class="btn btn-primary float-end w-100" value="Odpovedať">
+  <input type="submit" class="btn btn-lg btn-primary float-end w-100" value="Odpovedať">
+  </form>
 </div>
 
