--- a/mysite/page_generator/templates/page_generator/page_rating.html
+++ b/mysite/page_generator/templates/page_generator/page_rating.html
@@ -14,42 +14,45 @@
 
       <div class="card mb-3">
         <div class="card-header">
-          <h5 class="card-title mb-2 mt-2">
+          <div class="lead card-title mb-2 mt-2">
             Keby mal tento článok skutočný obsah, ako veľmi by ste mu dôverovali na nasledovnej stupnici:
-          </h5>
+          </div>
         </div>
         <div class="card-body">
-          {% for value, text in form.credibility.field.choices %}
-            {% if value == -3 %}
-              <label for="radio_{{ radio.index }}" align="">{{ text }}</label>
-            {% endif %}
-            <input name="credibility" type="radio" id="radio_{{ value }}" value={{ value }}>
-            {% if value == 3 %}
-              <label for="radio_{{ radio.index }}" align="">{{ text }}</label>
-            {% endif %}
-          {% endfor %}
+          <div class="d-flex justify-content-between">
+            <span>Úplne nedôveryhodný</span>
+            <span>Úplne dôveryhodný</span>
+          </div>
+
+          <div class="d-flex justify-content-between mt-3">
+            {% for value, text in form.credibility.field.choices %}
+              <input name="credibility" type="radio" id="radio_{{ value }}" value={{ value }}>
+            {% endfor %}
+          </div>
         </div>
       </div>
 
       <div class="card mb-3">
         <div class="card-header">
-          <h5 class="card-title mb-2 mt-2">
+          <div class="lead card-title mb-2 mt-2">
             Z nasledujúcich možností vyberte tie, ktoré najviac ovplyvnili vaše rozhodnutie v predchádzajúcej otázke.
-        Vybrať môžete jednu alebo viac možností. Pokiaľ žiadna z možností neovplyvnila vaše rozhodnutie, nemusíte vybrať ani jednu.
-          </h5>
+          </div>
+          <div class="lead">
+            Vybrať môžete jednu alebo viac možností. Pokiaľ žiadna z možností neovplyvnila vaše rozhodnutie, nemusíte vybrať ani jednu.
+          </div>
         </div>
         <div class="card-body">
           {% for field in form.visible_fields %}
               {% if field.label != 'Dôveryhodnosť' and field.name != 'page' %}
-                <p>
+                <div class="form-check mb-3">
                   {{ field }}
-                  <label for="field.label">{{ field.label }}</label>
-                </p>
+                  <label class="form-check-label">{{ field.label }}</label>
+                </div>
               {% endif %}
           {% endfor %}
         </div>
       </div>
-    <input type="submit" class="btn btn-primray float-end" value="Odpovedať">
+      <input type="submit" class="btn btn-lg btn-primary w-100" value="Odpovedať">
     </form>
   </div>
 </body>
