--- a/mysite/page_generator/templates/page_generator/start_page.html
+++ b/mysite/page_generator/templates/page_generator/start_page.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="jumbotron mt-3">
-          <h1 class="display-4">Expriment</h1>
+          <h1 class="display-4">Experiment</h1>
           <hr class="my-4">
           <p class="lead">Pre začatie experimentu stlačte nasledovné tlačidlo</p>
           <a class="btn btn-primary btn-lg w-100" href="/page_generator/page">Začať</a>
