add migrations folder

--- a/page_generator/templates/page_generator/page.html
+++ b/page_generator/templates/page_generator/page.html
@@ -152,6 +152,6 @@
 <script>
   setTimeout(goToNextPage, 3000);
   function goToNextPage() {
-  	location.href = "http://127.0.0.1:8000/page_generator/page_rating"
+  	location.href = "/page_generator/page_rating"
   }
 </script>
