--- a/page_generator/templates/page_generator/page_rating.html
+++ b/page_generator/templates/page_generator/page_rating.html
@@ -52,7 +52,7 @@
           {% endfor %}
         </div>
       </div>
-      <input type="submit" class="btn btn-lg btn-primary w-100" value="Odpovedať">
+      <input type="submit" class="btn btn-lg btn-primary w-100 mb-5" value="Odpovedať">
     </form>
   </div>
 </body>
