--- a/page_generator/templates/page_generator/questionaire.html
+++ b/page_generator/templates/page_generator/questionaire.html
@@ -35,7 +35,7 @@
     {% endif %}
   {% endfor %}
 
-  <input type="submit" class="btn btn-lg btn-primary float-end w-100" value="Odpovedať">
+  <input type="submit" class="btn btn-lg btn-primary float-end w-100 mb-5" value="Odpovedať">
   </form>
 </div>
 
