add instructions for experiment

--- a/page_generator/templates/page_generator/link_page.html
+++ b/page_generator/templates/page_generator/link_page.html
@@ -9,9 +9,11 @@
 <body>
     <div class="container">
         <div class="jumbotron mt-3">
-          <h1 class="display-4">Pre pokračovanie v experimente kliknite na odkaz nižšie</h1>
+          <h1 class="display-4">Pre pokračovanie v experimente kliknite na tlačidlo nižšie</h1>
           <hr class="my-4">
-          <p class="lead">Zobrazí sa vám dotazník. Prosím vyplňte tento dotazník</p>
+          <p class="lead">Teraz nasleduje časť, v ktorej je potrebné vyplniť dotazník. Prosím odpovedzte na otázky čo najúprimnejšie, za
+              žiadnu odpoveď vás nebudeme posudzovať. Celý dotazník sa skladá z piatich častí. Po kliknutí na tlačidlo nižšie budete presmerovaný
+              na Google dotazník. Predvyplnené číslo ID participnta prosím neprepisujte.</p>
         </div>
 
         {% if participants %}
