--- a/page_generator/templates/page_generator/questionaire.html
+++ b/page_generator/templates/page_generator/questionaire.html
@@ -5,6 +5,11 @@
 
 <div class="container">
   <h1 class="display-3 text-center mb-5 mt-3">Demografický dotazník</h1>
+  <hr class="my-4">
+  <p class="lead">Som študentkou fakulty informatiky a robím výskum na tému vnímania dôveryhodnosti správ na webe. Tento výskum robím v rámci svojej
+    diplomovej práce. Dotazník vám zaberie približne 10-15 minút. Na začiatok by som od vás potrebovala pár demografickým údajov, ďalšie pokyny pokyny
+    budú zobrazené po odoslaní dotazníka. Ďakujem veľmi pekne za ochotu zúčastniť sa na výskume. Pre vyplnenie dotazníka prosím použite MOBILNÝ TELEFÓN.
+    Ak nemáte možnosť použiť mobilný telefón, dotazník prosím nevypĺňajte.</p>
 
   <form method="post">
   {% csrf_token %}
