--- a/page_generator/templates/page_generator/start_page.html
+++ b/page_generator/templates/page_generator/start_page.html
@@ -11,7 +11,10 @@
         <div class="jumbotron mt-3">
           <h1 class="display-4">Experiment</h1>
           <hr class="my-4">
-          <p class="lead">Pre začatie experimentu stlačte nasledovné tlačidlo</p>
+          <p class="lead">Po stlačení tlačidla sa začne experiment.  Postupne sa vám zobrazí niekoľko stránok na krátky čas. Po každej stránke sa vám
+              zobrazí krátky dotazník. Vašou úlohou je označiť ako dôveryhodne na vás pôsobila stránka, ktorú ste práve videli.  Po odoslaní dotazníka sa
+              vám zobrazí ďalšia stránka. Celkovo týchto stránok bude 10. Žiadna vaša odpoveď nie je správna alebo nesprávna, zaujíma nás čisto váš názor.
+              Začnite, keď budete pripravený.</p>
           <a class="btn btn-primary btn-lg w-100" href="/page_generator/page">Začať</a>
         </div>
     </div>
