--- a/page_generator/templates/page_generator/page.html
+++ b/page_generator/templates/page_generator/page.html
@@ -1,8 +1,8 @@
 {% load static %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'page_generator/style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'page_generator/timer.css' %}">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
 
 {% if pages %}
     {% for page in pages %}
@@ -20,6 +20,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
           </div>
         </nav>
+
+        <div id="timer"></div>
+        <script src="{% static 'page_generator/timer.js' %}" charset="utf-8"></script>
 
         <div class="container">
 
@@ -149,9 +152,4 @@
     <p>No page available.</p>
 {% endif %}
 
-<script>
-  setTimeout(goToNextPage, 12000);
-  function goToNextPage() {
-  	location.href = "/page_generator/page_rating";
-  }
-</script>
+
