--- a/page_generator/templates/page_generator/link_page.html
+++ b/page_generator/templates/page_generator/link_page.html
@@ -9,11 +9,10 @@
 <body>
     <div class="container">
         <div class="jumbotron mt-3">
-          <h1 class="display-4">Pre pokračovanie v experimente kliknite na tlačidlo nižšie</h1>
+          <h1 class="display-4">Krok 3: Dotazník o využívaní médií</h1>
           <hr class="my-4">
-          <p class="lead">Teraz nasleduje časť, v ktorej je potrebné vyplniť dotazník. Prosím odpovedzte na otázky čo najúprimnejšie, za
-              žiadnu odpoveď vás nebudeme posudzovať. Celý dotazník sa skladá z piatich častí. Po kliknutí na tlačidlo nižšie budete presmerovaný
-              na Google dotazník. Predvyplnené číslo ID participnta prosím neprepisujte.</p>
+          <p class="lead">Odpovedzte nám prosím ešte na pár otázok o tom, ako využívate médiá. Celý dotazník sa skladá z troch častí. Po kliknutí na
+              tlačidlo nižšie budete presmerovaný na Google dotazník. Predvyplnené číslo ID participanta prosím neprepisujte.</p>
         </div>
 
         {% if participants %}
