--- a/page_generator/templates/page_generator/start_page.html
+++ b/page_generator/templates/page_generator/start_page.html
@@ -9,13 +9,16 @@
 <body>
     <div class="container">
         <div class="jumbotron mt-3">
-          <h1 class="display-4">Experiment</h1>
-          <hr class="my-4">
-          <p class="lead">Po stlačení tlačidla sa začne experiment.  Postupne sa vám zobrazí niekoľko stránok na krátky čas. Po každej stránke sa vám
-              zobrazí krátky dotazník. Vašou úlohou je označiť ako dôveryhodne na vás pôsobila stránka, ktorú ste práve videli.  Po odoslaní dotazníka sa
-              vám zobrazí ďalšia stránka. Celkovo týchto stránok bude 10. Žiadna vaša odpoveď nie je správna alebo nesprávna, zaujíma nás čisto váš názor.
-              Začnite, keď budete pripravený.</p>
-          <a class="btn btn-primary btn-lg w-100" href="/page_generator/page">Začať</a>
+            <h1 class="display-4">Krok 2: Posudzovanie dôveryhodnosti stránok</h1>
+            <hr class="my-4">
+            <p class="lead">Po stlačení tlačidla sa začne posudzovanie dôveryhodnosti rôznych foriem stránok. Postupne sa vám zobrazí niekoľko stránok na krátky
+              čas. Po každej stránke sa vám zobrazí krátky dotazník. Vašou úlohou je označiť ako dôveryhodne na vás pôsobila stránka, ktorú ste práve videli.
+              Po odoslaní dotazníka sa vám zobrazí ďalšia stránka. Celkovo týchto stránok bude 11. Žiadna vaša odpoveď nie je správna alebo nesprávna, zaujíma
+              nás čisto váš názor.</p>
+            <p class="lead">Stránky, ktoré uvidíte nebudú mať zmysluplný obsah. Pri vypĺňaní dotazníka sa riaďte tým, ako na vás stránka pôsobila vizuálne.</p>
+            <p class="lead">Po skončení zobrazenia stránky sa nepokúšajte vrátiť naspäť. Pokračujte vyplnením dotazníka, aj keď ste nestihli vidieť celú stránku.</p>
+            <p class="lead">Začnite, keď budete pripravený.</p>
+          <a class="btn btn-primary btn-lg w-100" href="/page_generator/page">Začať s posudzovaním stránok</a>
         </div>
     </div>
 </body>
