--- a/page_generator/templates/page_generator/link_page.html
+++ b/page_generator/templates/page_generator/link_page.html
@@ -11,7 +11,8 @@
         <div class="jumbotron mt-3">
           <h1 class="display-4">Krok 3: Dotazník o využívaní médií</h1>
           <hr class="my-4">
-          <p class="lead">Odpovedzte nám prosím ešte na pár otázok o tom, ako využívate médiá. Celý dotazník sa skladá z troch častí. Po kliknutí na
+          <p class="lead">Odpovedzte nám prosím ešte na pár otázok o tom, ako využívate médiá. Celý dotazník sa skladá z troch častí. Prostredníctvom dotazníka sa snažíme
+              zistiť, ako veľmi ste ponorený do sveta médii, nie to aké sú vaše vedomosti. Po kliknutí na
               tlačidlo nižšie budete presmerovaný na Google dotazník. Predvyplnené číslo ID participanta prosím neprepisujte.</p>
         </div>
 
