--- a/page_generator/static/page_generator/timer.css
+++ b/page_generator/static/page_generator/timer.css
@@ -1,11 +1,12 @@
 .base-timer {
-  position: fixed;
-  right: 20px;
-  width: 50px;
-  height: 50px;
-  background-color: #fff;
-  background-clip: border-box;
-  border-radius: 50px;
+    position: fixed;
+    right: 20px;
+    top: 92px;
+    width: 50px;
+    height: 50px;
+    background-color: #fff;
+    background-clip: border-box;
+    border-radius: 50px;
 }
 
 .base-timer__svg {
