--- a/page_generator/templates/page_generator/start_page.html
+++ b/page_generator/templates/page_generator/start_page.html
@@ -15,7 +15,7 @@
               čas. Po každej stránke sa vám zobrazí krátky dotazník. Vašou úlohou je označiť ako dôveryhodne na vás pôsobila stránka, ktorú ste práve videli.
               Po odoslaní dotazníka sa vám zobrazí ďalšia stránka. Celkovo týchto stránok bude 11. Žiadna vaša odpoveď nie je správna alebo nesprávna, zaujíma
               nás čisto váš názor.</p>
-            <p class="lead">Stránky, ktoré uvidíte nebudú mať zmysluplný obsah. Pri vypĺňaní dotazníka sa riaďte tým, ako na vás stránka pôsobila vizuálne.</p>
+            <p class="lead">Stránky, ktoré uvidíte <u><strong>nebudú mať zmysluplný obsah</strong></u>. Pri vypĺňaní dotazníka sa riaďte tým, ako na vás stránka pôsobila vizuálne.</p>
             <p class="lead">Po skončení zobrazenia stránky sa nepokúšajte vrátiť naspäť. Pokračujte vyplnením dotazníka, aj keď ste nestihli vidieť celú stránku.</p>
             <p class="lead">Začnite, keď budete pripravený.</p>
           <a class="btn btn-primary btn-lg w-100" href="/page_generator/page">Začať s posudzovaním stránok</a>
